src/f5-k8s/sample-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demo-app
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: f5-demo-app
        image: nginxdemos/hello
        ports:
         - containerPort: 80
           protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  labels:
    name: demo-app
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: demo-app
